crates/graphql-project/tests/snapshots/validation_snapshots__undefined_fragment_snapshot.snap
---
source: crates/graphql-project/tests/validation_snapshots.rs
expression: format_diagnostics(&diagnostics)
---
Error: cannot find fragment `UndefinedFragment` in this document
   ╭─[ crates/graphql-project/tests/undefined_fragment.graphql:4:5 ]
   │
 4 │     ...UndefinedFragment
   │     ──────────┬─────────  
   │               ╰─────────── fragment `UndefinedFragment` is not defined
───╯
